CIV-5018
Add CaseEvent MAKE_AN_ORDER
Add CaseState LISTED_FOR_A_HEARING
Update JudicialDecisionHandler to hanlde new event
Update FlowStateAllowedEventService with new event MAKE_AN_ORDER